docs(README.md): añadir despliegue