@@ -1,18 +1,20 @@
+
 ## Índice
 - [Introducción](#introducción)
   - [Supuesto](#supuesto-a-resolver)
-    - [Usuarios](#usuarios)
-    - [Preguntas](#preguntas)
-    - [Modos de Juego](#modos-de-juego)
-    - [Partidas](#partidas)
-    - [Categorías](#categoría)
+  - [Usuarios](#usuarios)
+  - [Preguntas](#preguntas)
+  - [Modos de Juego](#modos-de-juego)
+  - [Partidas](#partidas)
+  - [Categorías](#categoría)
   - [Modelo de la Base de Datos](#Modelo-de-la-Base-de-Datos)
 - [Manual técnico para desarrolladores](#manual-técnico-para-desarrolladores)
-    - [Requisitos Previos](#requisitos-previos)
-    - [Estructura del proyecto](#estructura)
-    - [Ejecución del proyecto](#ejecución-del-proyecto)
-    - [Testing](#testing)
-    - [Manejo de errores](#manejo-de-errores)
+- [Requisitos Previos](#requisitos-previos)
+- [Estructura del proyecto](#estructura)
+- [Despliegue](#despliegue-en-aws-ec2)
+- [Ejecución del proyecto](#ejecución-del-proyecto)
+- [Testing](#testing)
+- [Manejo de errores](#manejo-de-errores)
 - [Manual de usuario](#manual-de-usuario)
 - [Metodología de Desarrollo en Equipo](#metodología-de-desarrollo-en-equipo)
   - [Git](#uso-de-git)
@@ -30,95 +32,43 @@ Trabajo realizado por Yelko Veiga Quintas, Evan Silva González y David Búa Tei
 
 ### Supuesto a resolver
 
-___
-Deseamos diseñar un juego tipo quiz, dónde varios usuarios se conecten a diferentes partidas, respondiendo a una serie
-de peguntas, donde la velocidad va marcada por un gameMaster.
+___ Deseamos diseñar un juego tipo quiz, dónde varios usuarios se conecten a diferentes partidas, respondiendo a una serie de preguntas, donde la velocidad va marcada por un gameMaster (un usuario de tipo administrador).
 
-___
-
+___   
 #### *Usuarios*
 
-Llevamos un registro de nuestros usuarios con su **correo electrónico** como atributo obligatorio, junto con su **nombre
-**, **contraseña** y **fecha de nacimiento**. Además, podemos almacenar si el usuario tiene privilegios de administrador
-mediante el atributo `isAdmin`.
+Llevamos un registro de nuestros usuarios con su **correo electrónico** como atributo obligatorio, junto con su **nombre**, **contraseña** y **fecha de nacimiento**. Además, podemos almacenar si el usuario tiene privilegios de administrador mediante el atributo `isAdmin`.
 
-Además, se proporciona un constructor para crear instancias de usuarios con el correo electrónico obligatorio, mientras
-que el resto de los atributos pueden ser opcionales. También se incluye un método que permite añadir tareas al usuario,
-manteniendo la relación bidireccional entre usuario y tarea.
-
-Los usuarios se identifican principalmente por su **correo electrónico** o, en su caso, por su **ID** si se encuentran
-almacenados en la base de datos. Se implementa un sistema de comparación y hash basado en estos atributos para gestionar
-la identidad de los usuarios de forma eficiente.
-
-___
-
+Los usuarios se identifican principalmente por su **correo electrónico** y por su **ID**.  
+Hay un registro del número de partidas ganadas por un usuario.
+___   
 #### *Preguntas*
 
-Llevamos un registro de las **preguntas** en el sistema, cada una con su **enunciado**, **respuesta correcta**, *
-*categoría** y **puntuación** asociada. La **categoría** es un atributo que clasifica la pregunta dentro de un conjunto
-predefinido. La **puntuación** es un valor de tipo flotante que asigna un valor numérico a cada pregunta.
+Llevamos un registro de las **preguntas** de cada partida, cada una con su **enunciado**, **respuesta correcta**, **categoría** y **puntuación** asociada. La **categoría** es un atributo que clasifica la pregunta dentro de un conjunto predefinido. La **puntuación** es un valor de tipo flotante que asigna un valor numérico a cada pregunta.
 
-Cada pregunta tiene un **ID** único, generado automáticamente, y un **enunciado** que debe ser único en la base de
-datos. Además, se asegura que los atributos **respuesta correcta**, **categoría** y **puntuación** no sean nulos, ya que
-son fundamentales para el funcionamiento de la pregunta.
-
-Se implementan los métodos `equals()` y `hashCode()` para asegurar una correcta comparación entre preguntas, basándose
-en el **ID** y el **enunciado**. Además, el método `toString()` permite una representación legible de la pregunta, que
-incluye el **ID**, **enunciado**, **respuesta correcta**, **categoría** y **puntuación**.
-
-___
-
+Cada pregunta tiene un **ID** único, generado automáticamente, y un **enunciado** que debe ser único en la base de datos. Además, debemos asegurarnos que los atributos **respuesta correcta**, **categoría** y **puntuación** no se puedan dejar vacíos.
+___   
 #### *Modos de Juego*
+El **modo de juego** es la plantilla almacenada en el registro a partir de la cual se creará una partida. En el modo de juego se configura la partida a jugar.  
+Cada modo cuenta con un **nombre**, **número de preguntas** que se deben responder en el juego y una lista de **categorías** que estarán presentes en ese modo de juego.
 
-Llevamos un registro de los **modos de juego**, cada uno con un **nombre**, **número de preguntas** que se deben
-responder en el juego y una lista de **categorías** que estarán presentes en ese modo de juego.
-
-Cada **modo de juego** tiene un **ID** único, generado automáticamente. El **nombre** del modo es un atributo de texto,
-y el **número de preguntas** especifica cuántas preguntas estarán disponibles en ese modo de juego.
-
-Las **categorías** son representadas por un conjunto de enumeraciones (`Categoria`), que se almacenan en una lista. Esta
-lista se guarda utilizando una relación de colección a través de la anotación `@ElementCollection`, lo que permite
-almacenar múltiples categorías para cada modo de juego.
-
-Se proporciona un constructor para crear un **modo de juego** con los atributos **nombre**, **número de preguntas** y *
-*categorías**. Además, se incluyen métodos de acceso (getters y setters) para todos los atributos.
-
-___
-
+Cada **modo de juego** tiene un **ID** único, generado automáticamente.  
+Las **categorías** son representadas por un tipo enumerado (`Categoria`). Esta lista se guarda utilizando una relación de colección a través de la anotación `@ElementCollection`, lo que permite almacenar múltiples categorías para cada modo de juego.
+___   
 #### *Partidas*
 
-El sistema lleva un registro de las **partidas** en curso o terminadas. Cada partida tiene un **ID** único, un **hora y
-fecha** de inicio (almacenado como `LocalDateTime`), y un **estado de unirse** que indica si la partida está abierta
-para nuevos jugadores.
+El sistema lleva un registro de las **partidas** en curso y terminadas. Cada partida tiene un **ID** único, una **hora y fecha** de inicio, y un estado **joinable** que indica si la partida está abierta para nuevos jugadores.
 
-Una **partida** puede tener un **modo de juego** asociado, definido a través de una relación de tipo `ManyToOne`, que
-indica qué tipo de juego se está jugando.
+Una **partida** tiene un **modo de juego** asociado, de modo que varias partidas pueden tener el mismo modo de juego.
 
-Las **preguntas** que forman parte de la partida están asociadas mediante una relación de **muchos a muchos** (
-`ManyToMany`) con la entidad `Pregunta`, lo que permite tener múltiples preguntas para cada partida. Además, cada
-partida puede tener múltiples **jugadores** (usuarios), también a través de una relación de **muchos a muchos** con la
-entidad `Usuario`.
+Una partida tendrá un número de **preguntas** asociadas, pudiendo aparecer cada una de esas preguntas en diferentes partidas.  
+Además, cada partida puede tener múltiples jugadores (**usuarios**).
 
-El sistema permite identificar al **ganador** de la partida, que se asocia con un usuario a través de una relación
-`ManyToOne`.
-
-Además, cada partida tiene dos estados booleanos:
-
-- **start**: Indica si la partida ha comenzado.
-- **next**: Indica si la partida está lista para la siguiente pregunta.
-
-Los métodos permiten añadir o eliminar jugadores y preguntas a la partida, así como acceder a las listas de jugadores y
-preguntas.
-
-Se proporciona un constructor para crear una partida con todos los atributos necesarios y un constructor por defecto sin
-parámetros.
-
-___
-
+El sistema permetirá identificar al **ganador** de la partida.
+___   
 #### *Categoría*
 
-La **Categoría** es un enumerado (`enum`) que define los posibles tipos de categorías en las que pueden clasificarse las
-preguntas dentro del sistema de juego. Las categorías disponibles son:
+La **Categoría** es un enumerado (`enum`) que define los posibles tipos de categorías en las que pueden clasificarse las preguntas dentro del sistema de juego. Las categorías disponibles son:
 
 - **GEOGRAFÍA**
 - **HISTORIA**
@@ -127,10 +77,8 @@ preguntas dentro del sistema de juego. Las categorías disponibles son:
 - **CIENCIA Y NATURALEZA**
 - **ENTRETENIMIENTO**
 
-Cada pregunta dentro de la base de datos puede estar asociada a una de estas categorías, lo que permite organizar y
-filtrar las preguntas según su temática.
-___
-
+Cada pregunta dentro de la base de datos puede estar asociada a una de estas categorías, lo que permite organizar y  filtrar las preguntas según su temática.
+___   
 ### Modelo de la Base de Datos
 
 A continuación se muestra el esquema Crow's Foot de la base de datos diseñada para implementar el supuesto comentado en el apartado anterior
@@ -143,63 +91,47 @@ A continuación se muestra el esquema Crow's Foot de la base de datos diseñada 
 
 ### Requisitos previos
 
-- **Java SE 17 o superior**: El proyecto está desarrollado usando Java 17, por lo que necesitarás tener una versión
-  igual o superior
+- **Java SE 17 o superior**: El proyecto está desarrollado usando Java 17, por lo que necesitarás tener una versión    
+  igual o superior    
   instalada. ([descargar](https://www.oracle.com/java/technologies/javase/jdk17-archive-downloads.html))
-- **Maven**: La gestión de dependencias se hace con Maven, por lo que deberás tener Maven
-  instalado.([descargar](https://maven.apache.org/download.cgi))
-- **IDE recomendado**: Se recomienda el uso de IntelliJ IDEA para un desarrollo más sencillo, pero se puede usar
-  cualquier otro IDE compatible con Java. ([descargar](https://www.jetbrains.com/idea/download/?section=windows))
-- **SpringBoot** : Se ha usado SpringBoot para la creación de la aplicación
+- **Maven**: La gestión de dependencias se hace con Maven, por lo que deberás tener Maven instalado.([descargar](https://maven.apache.org/download.cgi))
+- **IDE recomendado**: Se recomienda el uso de IntelliJ IDEA para un desarrollo más sencillo, pero se puede usar cualquier otro IDE compatible con Java. ([descargar](https://www.jetbrains.com/idea/download/?section=windows))
+- **SpringBoot** : Se ha usado SpringBoot para la creación de la aplicación    
   web. ([documentacion](https://spring.io/projects/spring-boot))
 
 ### Estructura
 
 [Volver al índice](#índice)
 
-El proyecto está planteado siguiendo el
-patrón [Modelo-Vista-Controlador.](https://es.wikipedia.org/wiki/Modelo%E2%80%93vista%E2%80%93controlador)
+El proyecto está planteado siguiendo el patrón [Modelo-Vista-Controlador.](https://es.wikipedia.org/wiki/Modelo%E2%80%93vista%E2%80%93controlador)
 
 #### Modelo
 
-___
-El modelo contiene los datos del programa y define cómo estos deben ser manipulados, es decir, contiene la lógica que se
-necesita para gestionar el estado y las reglas del negocio.
-Interactúa respondiendo a las solicitudes del controlador para acceder o actualizar los datos. Notifica indirectamente a
-la vista cuando los datos han cambiado para que se actualice la presentación.
+___ El modelo contiene los datos del programa y define cómo estos deben ser manipulados, es decir, contiene la lógica que se necesita para gestionar el estado y las reglas del negocio. Interactúa respondiendo a las solicitudes del controlador para acceder o actualizar los datos. Notifica indirectamente a la vista cuando los datos han cambiado para que se actualice la presentación.
 
 Nuestra aplicación cuenta con los siguientes paquetes:
 
-- **<u>java.quizmasters.model</u>**: Contiene las clases de acceso a base de datos. En este, se encuentran los
-  siguientes paquetes: `Categoria`, `ModoDeJuego`, `Partida`, `Pregunta`, `Usuario`y `Tarea`, este ultimo como una clase
+- **<u>model</u>**: Contiene las clases de acceso a base de datos. En este, se encuentran los    
+  siguientes paquetes: `Categoria`, `ModoDeJuego`, `Partida`, `Pregunta`, `Usuario`y `Tarea`, este ultimo como una clase    
   vestigial del proyecto base ofrecido por el tutor.
-
-
+- **<u>repository</u>**: Interfaces para acceder a la base de datos.
+- **<u>service</u>**: Cuenta con varias clases donde se hace uso de los repositorios de la base de datos y se implementa la lógica de negocio.
+- **<u>authentication</u>**: cuenta con la clase `ManagerUserSession`para gestionar el login de usuarios.
+- **<u>config</u>**: cuenta con una clase `ModelMapperConfig` que permite mapear los DTO a los objetos del modelo.
+- **<u>dto</u>**: diferentes clases para manejar el tratamiento de datos desde la vista, como `LoginData`, `PartidaForm` o `QuizData`.
 
 #### Controlador
 
-___
-El controlador recibe las entradas del usuario desde la vista y las traduce en acciones que el modelo debe ejecutar. Se
-encarga de interpretar las acciones del usuario, manejar los eventos, y de actualizar tanto el modelo como la vista.
+___ El controlador recibe las entradas del usuario desde la vista y las traduce en acciones que el modelo debe ejecutar. Se encarga de interpretar las acciones del usuario, manejar los eventos, y de actualizar tanto el modelo como la vista.
 
-- **<u>java.quizmasters.controller</u>**: Coordina la interacción entre los diferentes componentes. Para cada clase del
-  modelo de la aplicación existe un controlador que la maneja y estructura los datos del modelo: `ModoDeJuego` es
-  controlado por `ModoDeJuegoController`, `citas.fxml` por `CitasController.java` etc. En total tenemos 8 controladores
-  en nuestra aplicación, pero solo 7 que usemos como tal, dado que `TareaController` es una clase vestigial como su
-  correspondiente en el modelo.
+- **<u>java.quizmasters.controller</u>**: Coordina la interacción entre los diferentes componentes. Para cada clase del  modelo de la aplicación existe un controlador que la maneja y estructura los datos del modelo. Además de los controladores que manejan las entidades del modelo, también existe un controlador para gestionar el login, así como otro para gestionar el flujo del Quiz y uno más para manejar la gestión de los administradores en la aplicación.
 
 #### Vista
 
-___
-Se encarga de la visualización de los datos del modelo de manera que el usuario los entienda. No contiene lógica de
-negocio, solo muestra lo que el modelo le proporciona.. La vista recibe entradas del usuario (clics, teclas, etc.) y las
-envía al controlador, en Springboot, a veces se tramitan en la propia página.
+___ Se encarga de la visualización de los datos del modelo de manera que el usuario los entienda. No contiene lógica de  negocio, solo muestra lo que el modelo le proporciona.. La vista recibe entradas del usuario (clics, teclas, etc.) y las envía al controlador.
 
-- **<u>resources.static.css</u>**: en el directorio css se almacenan los recursos necesarios para construir la interfaz
-  de usuario enfocado a estilos.
-
-- **<u>resources.templates</u>**: Es el principal paqiete del paquete de vista, con los archivos `*.html`, que es
-  utilizada para almacenar la estructura de las paginas que se visualizan a lo largo de la aplicación.
+- **<u>resources.static.css</u>**: en el directorio css se almacenan los recursos necesarios para definir los estilos de la interfaz.
+- **<u>resources.templates</u>**: Es el principal paquete de la vista, con los archivos `*.html`, que es utilizada para almacenar la estructura de las paginas que se visualizan a lo largo de la aplicación. Utilizamos thymeleaf para gestionar la presentación a través de html.
 
 ### Código Destacado
 
@@ -226,22 +158,11 @@ El mayor problema que surge de esta implementación es que los emitters son prop
 
 [Volver al índice](#índice)
 
-Este proyecto implementa un enfoque de Desarrollo Guiado por Pruebas (TDD) para la capa de acceso a datos (el modelo del
-patrón MVC). TDD nos permitió diseñar la funcionalidad necesaria enfocándonos en cumplir primero los requisitos a través
-de casos de prueba. Este enfoque garantiza que cada funcionalidad desarrollada no solo cumpla con las especificaciones
-iniciales, sino que también sea robusta y verificable.
+Este proyecto implementa un enfoque de Desarrollo Guiado por Pruebas (TDD) para la capa de acceso a datos (el modelo del patrón MVC). TDD nos permitió diseñar la funcionalidad necesaria enfocándonos en cumplir primero los requisitos a través de casos de prueba. Este enfoque garantiza que cada funcionalidad desarrollada no solo cumpla con las especificaciones iniciales, sino que también sea robusta y verificable.
 
-Al principio se utilizó una base de datos específica para realizar los test, **`quiz_test`**. Cada prueba se ejecuta en
-una base de datos aislada. Los tests se centran sobre todo en comprobar que las operaciones se realizan con éxito.
-Debido a problemas con el método de inicialización drop and create de hibernate, los test dependen unos de otros. Solo
-es posible ejecutarlos en un orden específico, y si se realizan cambios en la base de datos de prueba no se mantienen
-aislados, con lo cual se pueden producir errores en la automatización. Luego las pruebas se llevaron a cabo en la base
-de datos de AWS.
+Al principio se utilizó una base de datos específica para realizar los test, **`quiz_test`**. Cada prueba se ejecuta en una base de datos aislada. Los tests se centran sobre todo en comprobar que las operaciones se realizan con éxito.
 
-En esta versión (1.0) tan solo está testeada la parte de acceso a datos del modelo (preguntas y modo de juego). Los
-casos test referidos al modelo se encuentran en las clases dentro del paquete `src.test.quizmasters.`, dividiendo los
-test del mismo modo que se hizo con el modelo, usando directorios con los nombres de la parte que se desea testear,
-siendo `controller`, `repository` y `service`.
+En esta versión (1.0) tan solo está testeada la parte de acceso a datos del modelo (preguntas y partidas). También existen algunos test de la capa de presentación (preguntas). Los casos test referidos al modelo se encuentran en las clases dentro del paquete `src.test.quizmasters.`, dividiendo los test del mismo modo que se hizo con el modelo, usando directorios con los nombres de la parte que se desea testear, siendo `controller`, `repository` y `service`.
 
 
 ### Configuración de Maven
@@ -250,79 +171,130 @@ siendo `controller`, `repository` y `service`.
 
 El archivo `pom.xml` incluye las siguientes dependencias importantes:
 
-```xml
+```xml    
+ <parent>    
+ <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-parent</artifactId> <version>3.4.1</version></parent>    
 
-<parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.4.1</version>
-</parent>
+ <dependencies>
+   <dependency>
+     <groupId>mysql</groupId>
+     <artifactId>mysql-connector-java</artifactId>
+     <version>8.0.33</version>
+   </dependency>
+   <dependency>
+     <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot-starter-web</artifactId>
+   </dependency>
+   <dependency>
+     <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot-starter-thymeleaf</artifactId>
+   </dependency>
+   <dependency>
+     <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot-starter-data-jpa</artifactId>
+   </dependency>
+   <dependency>
+     <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot-starter-validation</artifactId>
+   </dependency>
+   <dependency>
+     <groupId>com.h2database</groupId>
+     <artifactId>h2</artifactId>
+     <scope>runtime</scope>
+   </dependency>
+   <dependency>
+     <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot-starter-test</artifactId>
+     <scope>test</scope>
+   </dependency>
+   <dependency>
+     <groupId>org.modelmapper</groupId>
+     <artifactId>modelmapper</artifactId>
+     <version>3.0.0</version>
+   </dependency>
+ </dependencies>
+```   
+  
+### Ejecución del proyecto  
+  
+[Volver al índice](#índice)  
+  
+La aplicación está configurada para escuchar en el puerto 8080 una vez ejecutada. Además, en la versión 1.0 están presentes dos configuraciones de base de datos:  
+- aws: **application-aws.properties** cuenta con la configuración de una base de datos MySql que utiliza el servicio RDS de Amazon Web Service. Es la configuración predeterminada de la app.  
+- local: **application-local.properties** donde está configurada una base de datos MySql pensada para funcionar localmente.  
+  
+  
+### Despliegue en AWS EC2  
+  
+[Volver al índice](#índice)  
+  
+Actualmente la aplicación está funcionando en [quizmasters.ddns.net](http://quizmasters.ddns.net), aunque por seguridad tan solo es accesible desde el IES de Teis y las IPs públicas desde las que se llevó a cabo el desarrollo.  
+Este apartado describe el proceso para desplegar la aplicación en un servidor EC2 de AWS, utilizando Docker y NGINX, asignando también un dominio a través de No-Ip.  
+  
+#### 1. Crear la instancia EC2  
+  
+- Creamos un servidor Amazon Linux en el servicio EC2 de Amazon Web Service.  
+- En nuestro caso, **IP pública:** `3.8.156.233`  
+  
+#### 2. Instalar Docker  
+  
+Nos conectamos a la instancia EC2 a través de SSH y ejecutamos los siguientes comandos para instalar Docker:  
+  
+```bash  
+sudo yum update -y  
+sudo yum install -y docker  
+```  
+#### 3. Crear el Dockerfile
 
+En el directorio raíz del proyecto, creamos el archivo `Dockerfile` para generar la imagen del contenedor. Indicamos jdk 17 y alpine como versión ligera de SO sobre el que correrá nuestra app.
 
-<dependencies>
-    <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>8.0.33</version>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-thymeleaf</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-validation</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <scope>runtime</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-test</artifactId>
-        <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.modelmapper</groupId>
-        <artifactId>modelmapper</artifactId>
-        <version>3.0.0</version>
-    </dependency>
-</dependencies>
-```
+#### 4. Crear la imagen Docker
 
+Desde el directorio donde se encuentra el Dockerfile, ejecutamos el siguiente comando para construir la imagen Docker:
 
-### Ejecución del proyecto
+```bash  
+sudo docker build -t quizmasters .  
+```  
+A partir de la imagen, la comprimimos en un .tar para posteriormente copiarla en el servidor.
 
-[Volver al índice](#índice)
+#### 5. Copiar la imagen Docker al servidor EC2
 
-#### Desde el IDE (IntelliJ IDEA):
+Una vez construida la imagen, utilizamos SCP para copiarla al servidor EC2:
 
-1. Importar el proyecto como un proyecto Maven.
-2. Asegurarse de que las dependencias estén instaladas en el `pom.xml`.
-3. Configurar los módulos de JavaFX como se describió anteriormente.
-4. Ejecutar la clase `Main` para iniciar la aplicación.
+```bash  
+  
+scp -i /ruta/a/tu/llave.pem quizmasters.tar ec2-user@3.8.156.233:/home/ec2-user  
+```  
+Luego, en la instancia EC2, cargamos la imagen Docker:
 
-#### Desde la terminal:
+```bash  
+sudo docker load < quizmasters.tar`
+```  
 
-Una vez que el JAR esté generado, se ejecuta el siguiente comando **desde el directorio donde se encuentre el .jar
-generado**:
+#### 6. Configurar permisos IP  
+  
+Configuramos los permisos en la consola de AWS para permitir el acceso a la IP pública del servidor, especialmente el instituto (IES de Teis).  
+  
+#### 7. Ejecutar el contenedor Docker  
+  
+Una vez cargamos la imagen, ejecutamos el contenedor con el siguiente comando:  
+  
+```bash  
+sudo docker run -d --name quizmasters -p 8080:8080 --restart always quizmasters  
+```  
 
-``` bash
-java --module-path="/ruta/al/javafx/lib" --add-modules="javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.swing,javafx.media" -jar nombre-del-archivo.jar
-```
+Esto ejecutará el contenedor en segundo plano, vinculando el puerto 8080 de la instancia EC2 al puerto 8080 del contenedor.
 
-En la siguiente captura mostramos la ejecución del JAR desde el terminal.
+#### 8. Instalar NGINX
 
-### Despliegue (Yelko time)
+Para evitar tener que escribir el puerto al acceder a la web, instalamos NGINX en la instancia EC2 y lo configuramos para redirigir las peticiones del puerto 80 al 8080 de nuestra aplicación.
+
+#### 9. Configurar el dominio con No-Ip
+
+Creamos una cuenta en [No-Ip](https://www.noip.com/) y asignamos el dominio `quizmasters.ddns.net` a nuestra IP pública de EC2.
+
+Con esta configuración, al acceder a `quizmasters.ddns.net`, se redirigirán las solicitudes al contenedor Docker ejecutándose en el puerto 8080.
+
 
 ### Log in
 
@@ -332,13 +304,14 @@ El log in de la aplicación se realiza mediante un correo electrónico y una con
 
 #### **Características**
 
-- **Registro de usuarios**: Permite a los usuarios registrarse en la aplicación proporcionando un correo electrónico y
+- **Registro de usuarios**: Permite a los usuarios registrarse en la aplicación proporcionando un correo electrónico y    
   una contraseña. La contraseña se almacena en la base de datos como un hash seguro.
 
 - **Inicio de sesión de usuarios**: Permite a los usuarios iniciar sesión en la aplicación proporcionando su correo.
 
-- **Inicio de sesion de administrador**: Permite a los usuarios con privilegios de administrador iniciar sesión en la
+- **Inicio de sesion de administrador**: Permite a los usuarios con privilegios de administrador iniciar sesión en la    
   aplicación y acceder a funciones adicionales.
+
 ## Manual de usuario
 
 [Volver al índice](#índice)
@@ -353,30 +326,26 @@ Cambiar el enlace al nuevo vídeo.
 
 ### Uso de Git
 
-Este proyecto sigue una metodología de desarrollo incremental basado en ramas y pull request, lo que facilita la gestión
-de versiones y la colaboración entre desarrolladores. Cada grupo de tareas que se requieren para completar una seccion
-de la aplicacion fue englobada en una **issue**. Tratando de seguir la metodología de git-flow, las ramas principales del proyecto son `main` y `develop`, que contienen, respectivamente, versiones listas para producción e implementaciones correctas de las funcionalidades, mientras que el
-desarrollo se llevó a cabo en paralelo en las ramas que tienen un nombre acorde a la tarea.
+Este proyecto sigue una metodología de desarrollo incremental basado en ramas y pull request, lo que facilita la gestión de versiones y la colaboración entre desarrolladores. Cada grupo de tareas que se requieren para completar una seccion de la aplicacion fue englobada en una **issue**. Tratando de seguir la metodología de git-flow, las ramas principales del proyecto son `main` y `develop`, que contienen, respectivamente, versiones listas para producción e implementaciones correctas de las funcionalidades, mientras que el desarrollo se llevó a cabo en paralelo en las ramas que tienen un nombre acorde a la tarea.
 
 El flujo de trabajo del desarrollo es el siguiente:
 
-1. **Diseñar el issue**: Cuando se desea implementar una nueva funcionalidad, se trabaja en la rama relacionada con la
+1. **Diseñar el issue**: Cuando se desea implementar una nueva funcionalidad, se trabaja en la rama relacionada con la    
    propia funcionalidad que hemos creado a traves delissue.
 
-2. **Testeo**: Una vez que se ha completado la funcionalidad, se realizan pruebas para asegurar que todo funciona
+2. **Testeo**: Una vez que se ha completado la funcionalidad, se realizan pruebas para asegurar que todo funciona    
    correctamente y cumple con los requisitos establecidos.
 
 
-3. **Pull request**: Después de las pruebas exitosas, se realiza un "pull request" de la rama de funcionalidad a
-   `develop`. Este paso es crucial para comprobar la integración de la nueva funcionalidad con el resto del código del
+3. **Pull request**: Después de las pruebas exitosas, se realiza un "pull request" de la rama de funcionalidad a    
+   `develop`. Este paso es crucial para comprobar la integración de la nueva funcionalidad con el resto del código del    
    proyecto, los otros colaboradores revisan y aceptan el codigo proporcionado.
 
 
-4. **Merge a Main**: Finalmente, cuando la versión en `develop` ha sido probada y se confirma que es estable, se realiza
+4. **Merge a Main**: Finalmente, cuando la versión en `develop` ha sido probada y se confirma que es estable, se realiza    
    un "merge" a la rama `develop`, cuando una version del código llega a un estado útil, el "merge" se lleva a `main`.
 
-Este enfoque permite una colaboración fluida entre los dos desarrolladores, asegurando que el código sea de alta calidad
-y esté bien integrado antes de ser lanzado.
+Este enfoque permite una colaboración fluida entre los dos desarrolladores, asegurando que el código sea de alta calidad y esté bien integrado antes de ser lanzado.
 
 ### Reparto de tareas
 
@@ -386,11 +355,10 @@ TODO
 
 [Volver al índice](#índice)
 
-En la realización de este trabajo se incluyeron varios extras a mayores de los requisitos mínimos del proyecto. Los más
-destacables son los siquientes:
+En la realización de este trabajo se incluyeron varios extras a mayores de los requisitos mínimos del proyecto. Los más destacables son los siquientes:
 
-- Despliegue con Docker: la aplicación estará publicada en una instancia dockerizada EC2 de AWS o Azure, conectándose a una base de datos MySQL publicada en Azure o AWS-RDS. (10%)
-- Dashboard para el administrador de usuarios que acceden a nuestra aplicación (podrá crear, modificar, bloquear y borrar usuarios) (3%)
+- Despliegue con Docker: la aplicación estará publicada en una instancia dockerizada EC2 de AWS, conectándose a una base de datos MySQL publicada en AWS-RDS. Además se ha añadido un dominio al servidor EC2  redireccionado con NGINX para evitar escribir puertos, de modo que sea fácilmente accesible: [quizmasters.ddns.net](http://quizmasters.ddns.net)
+- Dashboard para el administrador de usuarios que acceden a nuestra aplicación (podrá crear, modificar y borrar usuarios).
 - Utilización de SseController y SseEmitter para enviar señales entre clientes: aunque no forma parte de los extras propuestos, la dedicación temporal necesaria para desarrollar esta parte es, cuanto menos, digna de mención.
 
 
@@ -398,9 +366,7 @@ destacables son los siquientes:
 
 [Volver al índice](#índice)
 
-Como en todo proyecto, existen numerosas características que por tiempo o recursos no se han podido implementar o que no
-se han podido perfeccionar. En nuestro caso hemos considerado las siguientes posibilidades de mejora, aunque siempre
-abiertos a la posibilidad de otras que no hemos detectado:
+Como en todo proyecto, existen numerosas características que por tiempo o recursos no se han podido implementar o que no se han podido perfeccionar. En nuestro caso hemos considerado las siguientes posibilidades de mejora, aunque siempre abiertos a la posibilidad de otras que no hemos detectado:
 
 - Implementar distintos tipos de preguntas (de respuesta múltiple, verdadero/falso)
 - Mejorar el sistema de corrección de pregunta, de modo que la respuesta del jugador sea válida si hay un % de acierto o si se acerca lo suficiente a la respuesta correcta (para evitar que las faltas de ortografía o errores de teclado cuenten como respuestas fallidas)
